--- a/portfolio.html
+++ b/portfolio.html
@@ -67,7 +67,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img4.jpg" alt="Постер New Orlean vs Golden Star" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img4.jpg" alt="Постер New Orlean vs Golden Star" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div> 
                         <div class="cards">
                         <h2 class="heading">Постер New Orlean vs Golden Star</h2>
                         <p class="coment">Дизайн</p>
@@ -75,7 +78,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img5.jpg" alt="Ресторан Seafood" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img5.jpg" alt="Ресторан Seafood" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Ресторан Seafood</h2>
                         <p class="coment">Приложение</p>
@@ -83,7 +89,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img6.jpg" alt="Проект Prime" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img6.jpg" alt="Проект Prime" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Проект Prime</h2>
                         <p class="coment">Маркетинг</p>
@@ -91,7 +100,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img7.jpg" alt="Проект Boxes" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img7.jpg" alt="Проект Boxes" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Проект Boxes</h2>
                         <p class="coment">Приложение</p>
@@ -99,7 +111,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img8.jpg" alt="Inspiration has no Borders" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img8.jpg" alt="Inspiration has no Borders" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Inspiration has no Borders</h2>
                         <p class="coment">Веб-сайт</p>
@@ -107,7 +122,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img9.jpg" alt="Издание Limited Edition" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img9.jpg" alt="Издание Limited Edition" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Издание Limited Edition</h2>
                         <p class="coment">Дизайн</p>
@@ -115,7 +133,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img10.jpg" alt="Проект LAB" width=370 height=294>
+                            <div class="overlay">
+                            <img src="./images/img10.jpg" alt="Проект LAB" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Проект LAB</h2>
                         <p class="coment">Маркетинг</p>
@@ -123,7 +144,10 @@
                     </a>
                     <li class="content-list">
                         <a class="project-list" href="" style='text-decoration: none'>
-                        <img src="./images/img11.jpg" alt="Growing Business" width=370 height=294>
+                        <div class="overlay">
+                            <img src="./images/img11.jpg" alt="Growing Business" width=370 height=294>
+                            <p class="overlay-box">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов</p>
+                        </div>
                         <div class="cards">
                         <h2 class="heading">Growing Business</h2>
                         <p class="coment">Приложение</p>
