--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
     </div>
     </footer>
     
-    <div class="backdrop is-hidden" data-backdrop>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="btn" data-modal-close>
                 <svg class="btn-icon" width="11" height="11">
