--- a/portfolio.html
+++ b/portfolio.html
@@ -46,11 +46,11 @@
         <section class="portfolio">
             <div class="container">
                 <ul class="filter">
-                <li class="knob"><button type="button" class="filter-button list current"  style = 'cursor: pointer'>Все</button></li>
+                <li class="knob"> <button type="button" class="filter-button"  style = 'cursor: pointer'>Все</button></li>
                 <li class="knob"> <button type="button" class="filter-button"  style = 'cursor: pointer'>Веб-сайты</button></li>
                 <li class="knob"> <button type="button" class="filter-button"  style = 'cursor: pointer'>Приложения</button></li>
                 <li class="knob"> <button type="button" class="filter-button"  style = 'cursor: pointer'>Дизайн</button></li>
-                <li class="knob"><button  type="button" class="filter-button"  style = 'cursor: pointer'>Маркетинг</button></li>
+                <li class="knob"> <button type="button" class="filter-button"  style = 'cursor: pointer'>Маркетинг</button></li>
                 </ul>
              
             <ul class="content">
